--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,9 @@
     "animate.css": "~3.4.0",
     "angular": "~1.4.2",
     "angularfire": "~1.1.3",
-    "angular-resource": "~1.4.8"
+    "angular-resource": "~1.4.8",
+    "angular-animate": "~1.4.8"
+
   },
   "devDependencies": {
     "angular-mocks": "~1.4.2"
