--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "1Meetup",
   "version": "0.0.0",
   "dependencies": {
+    "angular-bootstrap-datetimepicker": "^0.4.0",
     "angularfire": "^1.1.3",
     "firebase": "^2.3.2"
   },
